Add Dask exercise

--- a/Pandas chunksize - London Smart Energy EN.ipynb
+++ b/Pandas chunksize - London Smart Energy EN.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "Since the data science world is all about \"Big data\", I decided to look at the different ways to manipulate datasets that are too large to be loaded into the memory of my laptop.\n",
     "\n",
-    "This is the first of a series where I look at big datasets, and in this case I'll be using the `chunksize` parameter of pandas `read_csv` to manage a large file size."
+    "This is the first of a series where I look at big datasets, and in this case I'll be using the `chunksize` parameter of pandas `read_csv` to manage a large file size. You can find each notebook in the series in my [Github repo](https://github.com/jlad26/london-smart-energy), including:\n",
+    "1. Pandas chunksize\n",
+    "1. Dask library"
    ]
   },
   {
@@ -86,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39ccfd1f",
+   "id": "d8eb0350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7bac593",
+   "id": "5e65d460",
    "metadata": {},
    "source": [
     "First we unzip the data. This may take a while! Alternatively you can unzip it manually using whatever unzip utility you have. Just make sure the extracted file is in a folder called `data` within the folder where your notebook is saved."
@@ -1110,6 +1112,8 @@
    "metadata": {},
    "source": [
     "Now that we have reduced the data down to about 3 million rows it should be managable in a single dataframe. It's useful to save the data so that we don't have to re-run the aggregation every time we want to work on the aggregated data.\n",
+    "\n",
+    "We'll save it in a compressed gz format - pandas automatically recognizes the filetype we specify.\n",
     "\n",
     "(We can also use the `chunksize` parameter to write to a csv in chunks, but it shouldn't be necessary now that we've reduced the size.)"
    ]
