--- a/Pandas chunksize - London Smart Energy FR.ipynb
+++ b/Pandas chunksize - London Smart Energy FR.ipynb
@@ -15,7 +15,9 @@
    "source": [
     "Puisque le \"Big data\" est un élément principal du monde de data science, j'ai décidé de regarder les moyens différents pour traiter les jeux de données qui sont trop grands pour être chargés en la mémoire de mon laptop.\n",
     "\n",
-    "Ce noteboook est le premier d'une série où je regarde des grands jeux de données, et cette fois-ci j'utiliserai le paramètre `chunksize` de la méthode `read_csv` de pandas pour traiter un fichier de grande taille."
+    "Ce noteboook est le ***premier*** d'une série où je regarde des grands jeux de données, et cette fois-ci j'utiliserai le paramètre `chunksize` de la méthode `read_csv` de pandas pour traiter un fichier de grande taille. On peut trouver chaque notebook dans la série dans mon [répertoire Github](https://github.com/jlad26/london-smart-energy), y compris:\n",
+    "1. Pandas chunksize\n",
+    "1. Bibliothèque Dask"
    ]
   },
   {
@@ -36,7 +38,9 @@
     "\n",
     "Les résidences étaient divisées en deux groupes:\n",
     "- Celles qui ont reçu des tarifs d'énergie Dynamic Time of Use (dTou) (décrit \"Haut\", \"Moyen\", ou \"Bas\") la veille du jour où le prix allait être appliqué.\n",
-    "- Celles qui étaient soumises au tarif Standard."
+    "- Celles qui étaient soumises au tarif Standard.\n",
+    "\n",
+    "Un but du projet était d'évaluer si la connaisance du prix de l'énergie changerait le comportement par rapport à la consommation d'énergie."
    ]
   },
   {
@@ -1111,6 +1115,8 @@
    "source": [
     "Maintentant qu'on a ramené les données à environ 3 millions lignes on devrait pouvoir les contenir dans un seul dataframe. Il vaut mieux les sauvegarder pour qu'on n'ait pas besoin de réexecuter l'agrégation chaque fois qu'on veut traiter les données.\n",
     "\n",
+    "On va le sauvegarder comme fichier compressé gz - pandas reconnait automatiquement le type de fichier quand on précise l'extension.\n",
+    "\n",
     "(On peut également utiliser le paramètre `chunksize` pour sauvegarder par tranche, mais ca ne devrait pas être nécessaire maintenant qu'on a réduit la taille.)"
    ]
   },
@@ -1129,7 +1135,7 @@
    "id": "e985202a",
    "metadata": {},
    "source": [
-    "## Analysing the data"
+    "## Analyser les données"
    ]
   },
   {
