Don't save image each time

--- a/Pandas chunksize - London Smart Energy EN.ipynb
+++ b/Pandas chunksize - London Smart Energy EN.ipynb
@@ -2075,7 +2075,7 @@
     "plt.ylabel('kWH', fontsize = 14)\n",
     "\n",
     "# Uncomment for a copy to display in results\n",
-    "plt.savefig(fname='images/result1.png', bbox_inches='tight')\n",
+    "# plt.savefig(fname='images/result1.png', bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
