--- a/Dask - London Smart Energy EN.ipynb
+++ b/Dask - London Smart Energy EN.ipynb
@@ -2219,7 +2219,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0535d9bc",
+   "id": "882be014",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2655,7 +2655,7 @@
     "plt.ylabel('kWH', fontsize = 14)\n",
     "\n",
     "# Uncomment for a copy to display in results\n",
-    "plt.savefig(fname='images/result1.png', bbox_inches='tight')\n",
+    "# plt.savefig(fname='images/result1.png', bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
