--- a/Pandas chunksize - London Smart Energy FR.ipynb
+++ b/Pandas chunksize - London Smart Energy FR.ipynb
@@ -1761,7 +1761,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "552ff967",
+   "id": "ca169a40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2201,7 +2201,7 @@
     "plt.ylabel('kWH', fontsize = 14)\n",
     "\n",
     "# Uncomment for a copy to display in results\n",
-    "plt.savefig(fname='images/result1.png', bbox_inches='tight')\n",
+    "# plt.savefig(fname='images/result1.png', bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
